# xlconv

./: .gitignore  Book1.xls  Book1.xlsm  Book1.xlsx  Book2.xlsx  CHANGELOG  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: release.yaml
src/: main.rs  worksheets.rs
